--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "events": "^3.3.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "path": "^0.12.7"
   }
 }
